<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="text_Login">Login</string>
    <string name="template_Login_Text">Login Name</string>
    <string name="text_Password">Password</string>
    <string name="template_Password_Text">Enter password here</string>
    <string name="radio_Button_Text">RadioButton</string>
    <string name="check_Box_Text">CheckBox</string>
    <string name="switch_Text">What does this do?</string>
    <string name="login_Button_Text">Login</string>
    <string name="password_Toast">Please enter a password</string>
    <string name="email_Toast">Please enter a valid email</string>
    <string name="dialog_message">Do you wish to go back?</string>
    <string name="dialog_title">Finish</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="switch_On">Switch is on</string>
    <string name="switch_Off">Switch is off</string>
    <string name="response">"ListItemsActivity passed: My information to share"</string>
    <string name="here_is_my_response">Here is my response</string>
    <string name="start_Chat_Button">Start Chat</string>
    <string name="send_Button_Text">Send</string>
    <string name="chat_Row_Text_View_Out">New Text</string>
    <string name="chat_Row_Text_View_Inc">New Text</string>
    <string name="emptyMsg">Please enter a message</string>
    <string name="testMessage">This is a test message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="test_Toolbar">Test Toolbar</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="version">Version 1 by </string>
    <string name="devName"> Vaibhav Thakur</string>
    <string name="emailSnackString">Emails are not yet available</string>
    <string name="toolbarMenuSnackItem1">You selected Menu Item 1</string>
    <string name="toolbarMenuSnackItem2">You selected Menu Item 2</string>
    <string name="toolbarMenuSnackItem3">You selected Menu Item 3</string>
    <string name="toolbarMenuItem2Dialog">Do you want to go back?</string>
    <string name="messageDialogHint">New Messages</string>
    <string name="aboutMenu">About</string>
    <string name="weather_Button">Weather Forecast</string>
    <string name="select_city">Please select a city</string>
    <string name="delete_this_message">Delete this message?</string>
</resources>