<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2"
    >

    <RadioButton
        android:id="@+id/RadioButton"
        android:layout_width="wrap_content"
        android:text="@string/radio_Button_Text"
        android:layout_columnWeight="1"
        android:gravity="fill"
        >

    </RadioButton>

    <CheckBox
        android:id="@+id/checkbox_Button"
        android:layout_width="wrap_content"
        android:text="@string/check_Box_Text"
        android:layout_columnWeight="1"
        android:gravity="fill">
    </CheckBox>

    <Switch
        android:id="@+id/switch_Button"
        android:text="@string/switch_Text"
        android:layout_width="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill">
    </Switch>


    <ImageButton
        android:id="@+id/button_Img"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill">

    </ImageButton>



</GridLayout>